# mamy-myfamilyandme

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: .coverage  .env  conftest.py  create_test_data.py  db.sqlite3  immunization_calculator.py  immunization_schedule_2025.json  pyproject.toml  requirements.txt
backend/accounts/: serializers.py  tests.py  urls.py
backend/accounts/migrations/: 0001_initial.py
backend/children/: tests.py
backend/children/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/vaccinations/: apps.py  serializers.py  services.py  tests.py  urls.py
backend/vaccinations/migrations/: 0001_initial.py
docs/: 002_ARD.md  Frontend.md  pytest-guide.md
frontend/MamyApp/: App.tsx  CHANGELOG.md  Untitled.swift  app.json  package-lock.json  package.json
frontend/MamyApp/android/: settings.gradle
frontend/MamyApp/android/app/: build.gradle
frontend/MamyApp/android/app/src/main/java/com/mamyapp/: MainActivity.kt  MainApplication.kt
frontend/MamyApp/android/app/src/main/res/values/: strings.xml
frontend/MamyApp/ios/: Podfile
frontend/MamyApp/ios/MamyApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  PrivacyInfo.xcprivacy
frontend/MamyApp/ios/MamyApp.xcodeproj/: project.pbxproj
frontend/MamyApp/ios/MamyApp.xcodeproj/xcshareddata/xcschemes/: MamyApp.xcscheme
frontend/MamyApp/ios/MamyApp.xcworkspace/: contents.xcworkspacedata
frontend/MamyApp/src/components/: Divider.tsx  Logo.tsx  SocialLoginButton.tsx  TabNavigator.tsx  UserModeSelector.tsx  VaccinationCarousel.tsx
frontend/MamyApp/src/screens/: CaregiverSignupScreen.tsx  DashboardScreen.tsx  LoginScreen.tsx  SignupScreen.tsx  SplashScreen.tsx  UserModeSelectionScreen.tsx
frontend/MamyApp/src/screens/tabs/: CommunityScreen.tsx  HealthScreen.tsx  HospitalScreen.tsx  MedicationScreen.tsx  VaccinationScreen.tsx
frontend/MamyApp/src/services/: api.ts  socialAuth.ts
frontend/MamyApp/src/theme/: colors.ts
frontend/MamyApp/src/types/: auth.ts  navigation.ts  vaccination.ts
